=========
Changelog
=========

v1.1.3

Improvements:
 * Website: Corporate branding (CIRCL - http://circl.lu/)
 * Use a dedicated logfile and not user.log anymore

Bugfixes:
 * Catch exception and try again if redis does not respond (db_input only)

v1.1.2

Bugfixes:
 * Website: Use the weight of the sources to display the graphs

Improvements:
 * Website: Display the ranking of yesterday by default
 * Tweek the default weights

v1.1.1

New 
 * Website: Ability to display the ranking of the last X days
 * Website: Display the Sources where the ASN has been found (index and details)
 * Website: In the ASNs details, the subnets are sorted by size
 * Website: Same for the IPs

Bugfixes:
 * Sort the IPs by subnets correctly
 * Update the date of the source files correctly
 * Website: XSS Vulnerability
 * Website: Escape the input

v1.1

New:
 * The project is now completely documented using sphinx
 * Add the configuration file of nginx with a basic auth on reload
 * Add parser for the list provided by malwaredomainlist.com

Bugfixes:
 * Automatically reload the ranking on the website after a computation