@@ -4,12 +4,15 @@ Changelog
 
 v1.1.3
 
+New:
+ * Very simple migroblog bot (twitter and identica)
+
 Improvements:
  * Website: Corporate branding (CIRCL - http://circl.lu/)
  * Use a dedicated logfile and not user.log anymore
 
 Bugfixes:
- * Catch exception and try again if redis does not respond (db_input only)
+ * Catch exception and try again if redis or a fetching server does not respond
 
 v1.1.2
 
